--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "main": "./src/server.js",
   "scripts": {
-    "dev": "node --watch src/server.js"
+    "dev": "node --watch src/server/server.js"
   },
   "repository": "git@github.com:boraladiogo/node-http-parse-regex.git",
   "author": "Diogo Martins <boraladiogo@gmail.com>",
