--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   },
   "repository": "git@github.com:boraladiogo/node-http-parse-regex.git",
   "author": "Diogo Martins <boraladiogo@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "eslint": "^7.32.0 || ^8.2.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2"
+  }
 }
