--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "rules": {
         "indent": [ "error", 4 ],
         "import/extensions": ["error", "always"],
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "class-methods-use-this": "off"
     }
 }
